--- a/action.yml
+++ b/action.yml
@@ -1,23 +1,22 @@
 # https://docs.github.com/en/actions/creating-actions/metadata-syntax-for-github-actions
-name: 'Action TS Template'
-description: 'A typescript template for rapid development of GitHub actions.'
-author: 'xrkffgg'
+name: "Action TS Template"
+description: "A typescript template for rapid development of GitHub actions."
+author: "xrkffgg"
 
 branding:
   # https://actions-cool.github.io/github-action-branding/
-  icon: 'file'
-  color: 'blue'
+  icon: "file"
+  color: "blue"
 
 inputs:
   token:
     description: Secret GitHub API token to use for making API requests.
     default: ${{ github.token }}
     required: true
-
-#outputs:
-#  result:
-#    description: action result
+  json_output:
+    description: The JSON output from ECS
+    required: true
 
 runs:
-  using: 'node12'
-  main: 'dist/index.js'
+  using: "node12"
+  main: "dist/index.js"
